code modification and new code added!