@@ -5,6 +5,7 @@ import com.raven.streams.Item;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 public class AverageOfNumbers {
     public static void main(String[] args) {
@@ -16,16 +17,16 @@ public class AverageOfNumbers {
                 .getAsDouble();
         System.out.println(average);
 
-        Item item1 = new Item(1, 35.5, 10);
-        Item item2 = new Item(2, 45.5, 15);
-        Item item3 = new Item(3, 55.5, 25);
-        Item item4 = new Item(4, 65.5, 40);
-        Item item5 = new Item(5, 75.5, 50);
-        Item item6 = new Item(6, 85.5, 60);
-        Item item7 = new Item(7, 95.5, 70);
-        Item item8 = new Item(8, 105.5, 80);
+        average = integerList.stream()
+                .collect(Collectors.averagingInt(e -> e));
+        System.out.println(average);
 
-        List<Item> items = Arrays.asList(item1, item2, item3, item4, item5, item6, item7, item8);
+        List<Double> doubleList = List.of(2.4, 5.6, 9.12, 7.34);
+        average = doubleList.stream()
+                .collect(Collectors.averagingDouble(e -> e));
+        System.out.println(average);
+
+        List<Item> items = getItems();
 
         average = items.stream()
                 .map(Item::getPrice)
@@ -50,5 +51,19 @@ public class AverageOfNumbers {
                 .average()
                 .getAsDouble();
         System.out.println(average);
+    }
+
+    private static List<Item> getItems() {
+        Item item1 = new Item(1, 35.5, 10);
+        Item item2 = new Item(2, 45.5, 15);
+        Item item3 = new Item(3, 55.5, 25);
+        Item item4 = new Item(4, 65.5, 40);
+        Item item5 = new Item(5, 75.5, 50);
+        Item item6 = new Item(6, 85.5, 60);
+        Item item7 = new Item(7, 95.5, 70);
+        Item item8 = new Item(8, 105.5, 80);
+
+        List<Item> items = Arrays.asList(item1, item2, item3, item4, item5, item6, item7, item8);
+        return items;
     }
 }
